profile text overflow fix in progress

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -21,5 +21,6 @@
   .profile__add-button {
     width: 150px;
     background-size: 22px;
+    margin-left: 40px;
   }
 }
