--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -7,6 +7,10 @@
   padding-top: 14px;
   text-align: center;
   padding-bottom: 36px;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 918px) {
