--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,20 +1,18 @@
 .profile__info {
-  width: 70%;
-  min-width: 200px;
-  max-width: 500px;
+  width: 100%;
   padding-top: 22px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-
+  text-align: center;
 }
 
 
 @media screen and (min-width: 918px) {
   .profile__info {
-
     padding: 0;
     flex-grow: 1;
     margin-left: 30px;
+    text-align: start;
   }
 }
